syntax = "proto3";

option csharp_namespace = "Libplanet.Store.Remote";

package libplanet.rpc.v1;

message GetRequest {
    bytes key = 1;
}

message SetRequest {
    bytes key = 1;
    bytes value = 2;
}

message SetMapRequest {
    map<string, bytes> map_field = 1;
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteCollectionRequest {
    repeated bytes key = 1;
}

message ExistsRequest {
    bytes key = 1;
}

message ListKeysRequest {
}
